[chore] refactor parse feature: rewrite step implementation from case switch to single step functions

--- a/source/TRule.cls
+++ b/source/TRule.cls
@@ -27,3 +27,7 @@ End Property
 Public Property Let Description(ByVal rule_description As String)
     m_rule_description = rule_description
 End Property
+
+Public Property Get WholeRule() As String
+    WholeRule = "Rule: " & Me.Name
+End Property
