--- a/step_definitions/Steps_Run_Tests.cls
+++ b/step_definitions/Steps_Run_Tests.cls
@@ -13,13 +13,13 @@ Option Explicit
 Const cTags = ""
 Dim m_description As String
 
-Public Property Get Description() As String
+Public Property Get description() As String
     
     If m_description = vbNullString Then
         m_description = "The main purpose of senfgurke is to run tests containing" & vbLf _
                             & "numerous examples used to describe distinct features."
     End If
-    Description = m_description
+    description = m_description
 End Property
 
 ' in the future this property shall be replaced with a function that parses text
@@ -61,7 +61,7 @@ Public Function run_step(step_definition As String) As Variant
     Exit Function
 
 error_handler:
-    run_step = TStepRunner.fail_step(Err.Number, Err.Description)
+    run_step = TStepRunner.fail_step(Err.Number, Err.description)
 End Function
 
 Public Sub before_example()
@@ -80,7 +80,7 @@ Private Sub pending(pending_msg)
     TStepRunner.pending pending_msg
 End Sub
 
-Public Property Let Description(ByVal new_description As String)
+Public Property Let description(ByVal new_description As String)
     m_description = new_description
 End Property
 
